# LowLatencyGameDetection

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/lowlatencygamedetection/tool/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  oboe-mixer.cpp
app/src/main/java/com/lowlatencygamedetection/tool/: MainActivity.java  MixerEngine.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lowlatencygamedetection/tool/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
